Add pagination and export to excel functionality

--- a/StockManagement.Presentation/src/app/header/header.component.html
+++ b/StockManagement.Presentation/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container d-block">
         <div class="row">
             <div class="d-flex justify-content-between">
-                <div class="container-fluid">
+                <div class="container-fluid d-flex">
                     <a class="navbar-brand" routerLink="/products">Products Stock</a>
                 </div>
                 <a class="btn btn-outline-primary text-nowrap"><i class="bi bi-plus-lg"></i> Add Product</a>
