--- a/StockManagement.Presentation/src/app/product/product.component.html
+++ b/StockManagement.Presentation/src/app/product/product.component.html
@@ -1,11 +1,15 @@
 <div class="mt-3">
-    <div *ngIf="loading" class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
+    <div *ngIf="loading" class="d-flex justify-content-center mt-5">
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
     </div>
 
-    <table *ngIf="!loading && productsList.length > 0" class="table table-hover">
+    <app-export-to-excel [items]="productsList" title="Products"></app-export-to-excel>
+
+    <table *ngIf="!loading" class="table table-hover">
         <thead>
-            <tr class="table-primary">
+            <tr class="table-success">
                 <th scope="col">ID</th>
                 <th scope="col">Name</th>
                 <th scope="col">Description</th>
@@ -15,7 +19,7 @@
                 <th scope="col">Actions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody *ngIf="productsList.length > 0">
             <tr *ngFor="let product of productsList">
                 <th scope="row">{{product.id}}</th>
                 <td>{{product.name}}</td>
@@ -23,14 +27,24 @@
                 <td>{{getCategoryName(product.category)}}</td>
                 <td><i class="bi bi-currency-dollar"></i>{{product.price}}</td>
                 <td>{{product.quantity}}</td>
-                <td><i class="bi bi-pencil"></i> | <i class="bi bi-trash"></i></td>
-            </tr>        
+                <td><a [routerLink]="'/products/edit/' + product.id"><i class="bi bi-pencil"></i></a> | <a><i class="bi bi-trash"></i></a></td>
+            </tr>
+        </tbody>
+
+        <tbody *ngIf="productsList.length <= 0">
+            <tr>
+                <td colspan="7" class="text-body-tertiary text-center">No products are available</td>
+            </tr>
         </tbody>
     </table>
 
-    <div *ngIf="!loading && productsList.length <= 0">
-        <span>No products are available!!</span>
-    </div>
+    <mat-paginator
+      [length]="totalProducts"
+      [pageSize]="pageSize"
+      [showFirstLastButtons]="showFirstLastButtons"
+      [pageSizeOptions]="pageSizeOptions"
+      (page)="onPageChange($event)">
+    </mat-paginator>
 
 </div>
 
