add and edit product

--- a/StockManagement.Presentation/src/app/export-to-excel/export-to-excel.component.html
+++ b/StockManagement.Presentation/src/app/export-to-excel/export-to-excel.component.html
@@ -1,5 +1,5 @@
 <div class="mb-2">
-  <button class="btn btn-success" (click)="exportToExcel()">
+  <button class="btn btn-success btn-sm" (click)="exportToExcel()">
     <i class="bi bi-file-earmark-excel"></i> Export to Excel
   </button>
 </div>
