--- a/StockManagement.Presentation/src/app/header/header.component.html
+++ b/StockManagement.Presentation/src/app/header/header.component.html
@@ -5,7 +5,7 @@
                 <div class="container-fluid d-flex">
                     <a class="navbar-brand" routerLink="/products">Products Stock</a>
                 </div>
-                <a class="btn btn-outline-primary text-nowrap"><i class="bi bi-plus-lg"></i> Add Product</a>
+                <a class="btn btn-outline-primary btn-sm text-nowrap" routerLink="/products/add"><i class="bi bi-plus-lg"></i> Add Product</a>
             </div>
         </div>
     </div>
