--- a/StockManagement.Presentation/src/app/product/product-add/product-add.component.html
+++ b/StockManagement.Presentation/src/app/product/product-add/product-add.component.html
@@ -1,5 +1,8 @@
 <div class="mt-4 p-3 col-12">
-    <h3>Create Product</h3>
+    <div class="d-flex justify-content-between align-items-center">
+      <h4>Create Product</h4>
+      <a class="btn btn-primary btn-sm" routerLink="/products">Return to Products</a>
+    </div>
     <hr>
     <form (ngSubmit)="onCreateProduct()" [formGroup]="createProductForm">
         <div class="row">
@@ -10,14 +13,14 @@
                     Please provide a valid product name.
                 </span>
             </div>
-    
+
             <div class="mb-3 col-md-6">
                 <label for="category" class="form-label">Category</label>
                 <select formControlName="category" class="form-select">
                     <option *ngFor="let c of categories" [value]="c.value">{{c.label}}</option>
                 </select>
             </div>
-        </div>        
+        </div>
 
         <div class="row">
             <div class="mb-3">
@@ -48,6 +51,5 @@
         </div>
 
         <button class="btn btn-primary me-2" type="submit" [disabled]="createProductForm.invalid">Create</button>
-        <button class="btn btn-secondary" (click)="resetFormValues()">Reset</button>
     </form>
 </div>
