--- a/StockManagement.Presentation/src/app/product/product-edit/product-edit.component.html
+++ b/StockManagement.Presentation/src/app/product/product-edit/product-edit.component.html
@@ -1,5 +1,8 @@
 <div class="mt-4 p-3 col-12">
-    <h3>Edit Product</h3>
+    <div class="d-flex justify-content-between align-items-center">
+      <h4>Edit Product</h4>
+      <a class="btn btn-primary btn-sm" routerLink="/products">Return to Products</a>
+    </div>
     <hr>
     <form (ngSubmit)="onUpdateProduct()" [formGroup]="updateProductForm">
         <div class="row">
@@ -10,14 +13,14 @@
                     Please provide a valid product name.
                 </span>
             </div>
-    
+
             <div class="mb-3 col-md-6">
                 <label for="category" class="form-label">Category</label>
                 <select formControlName="category" class="form-select">
                     <option *ngFor="let c of categories" [value]="c.value">{{c.label}}</option>
                 </select>
             </div>
-        </div>        
+        </div>
 
         <div class="row">
             <div class="mb-3">
