--- a/StockManagement.Presentation/src/app/product/product.component.html
+++ b/StockManagement.Presentation/src/app/product/product.component.html
@@ -1,11 +1,5 @@
 <div class="mt-3">
-    <div *ngIf="loading" class="d-flex justify-content-center mt-5">
-        <div class="spinner-border text-primary" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </div>
-    </div>
-
-    <div *ngIf="!loading">
+    <div>
         <div class="d-flex justify-content-between">
             <div class="d-flex align-items-center">
                 <input [(ngModel)]="nameFilter" type="text" class="form-control form-control-sm me-2" placeholder="Name" />
@@ -28,7 +22,7 @@
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
-            <tbody *ngIf="productsList.length > 0">
+            <tbody *ngIf="!loading && productsList.length > 0">
                 <tr *ngFor="let product of productsList">
                     <th scope="row">{{product.id}}</th>
                     <td>{{product.name}}</td>
@@ -40,17 +34,28 @@
                 </tr>
             </tbody>
 
-            <tbody *ngIf="productsList.length <= 0">
+            <tbody *ngIf="!loading && productsList.length <= 0">
                 <tr>
                     <td colspan="7" class="text-body-tertiary text-center">No products are available</td>
                 </tr>
+            </tbody>
+
+            <tbody *ngIf="loading">
+              <tr>
+                <td colspan="7" class="text-body-tertiary text-center">
+                  <div class="d-flex justify-content-center">
+                    <div class="spinner-border text-primary" role="status">
+                      <span class="visually-hidden">Loading...</span>
+                    </div>
+                  </div>
+                </td>
+              </tr>
             </tbody>
         </table>
 
         <mat-paginator
             [length]="totalProducts"
             [pageSize]="pageSize"
-            [showFirstLastButtons]="showFirstLastButtons"
             [pageSizeOptions]="pageSizeOptions"
             (page)="onPageChange($event)">
         </mat-paginator>
