--- a/StockManagement.Presentation/src/app/page-not-found/page-not-found.component.html
+++ b/StockManagement.Presentation/src/app/page-not-found/page-not-found.component.html
@@ -12,18 +12,17 @@
 				<div class="lc-block mb-3">
 					<div editable="rich">
 						<h1 class="display-1 fw-bold text-muted">Error 404</h1>
-
 					</div>
-				</div><!-- /lc-block -->
+				</div>
 				<div class="lc-block mb-5">
 					<div editable="rich">
 						<p class="rfs-11 fw-light"> The page you are looking for was moved, removed or might never existed.</p>
 					</div>
-				</div><!-- /lc-block -->
+				</div>
 				<div class="lc-block">
-					<a class="btn btn-lg btn-primary" href="#" role="button">Back to homepage</a>
-				</div><!-- /lc-block -->
-			</div><!-- /col -->
+					<a class="btn btn-lg btn-primary" routerLink="/products" role="button">Back to products page</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
