--- a/StockManagement.Presentation/src/app/header/header.component.html
+++ b/StockManagement.Presentation/src/app/header/header.component.html
@@ -6,7 +6,8 @@
                     <a class="navbar-brand" routerLink="/products">Products Stock</a>
                 </div>
                 <div class="d-flex">
-                    <a *ngIf="isAdmin() && !isActiveRoute('/products/add')" class="btn btn-outline-primary btn-sm text-nowrap" routerLink="/products/add"><i class="bi bi-plus-lg"></i> Add Product</a>
+                    <a *ngIf="isAdmin() && !isActiveRoute('/users')" class="btn btn-outline-primary btn-sm text-nowrap" routerLink="/users"><i class="bi bi-people"></i> Users</a>
+                    <a *ngIf="isAdmin() && !isActiveRoute('/products/add')" class="btn btn-outline-primary btn-sm text-nowrap ms-2" routerLink="/products/add"><i class="bi bi-plus-lg"></i> Add Product</a>
                     <button [hidden]="!isLoggedIn" class="btn btn-outline-primary btn-sm text-nowrap ms-2" (click)="logout()"><i class="bi bi-box-arrow-left"></i> Logout</button>
                 </div>
             </div>
