--- a/StockManagement.Presentation/src/app/export-to-excel/export-to-excel.component.html
+++ b/StockManagement.Presentation/src/app/export-to-excel/export-to-excel.component.html
@@ -1,5 +1,5 @@
-<div class="mb-2">
-  <button class="btn btn-success btn-sm" (click)="exportToExcel()">
-    <i class="bi bi-file-earmark-excel"></i> Export to Excel
+<div>
+  <button class="btn btn-light btn-sm px-3 py-2 fw-bold" (click)="exportToExcel()">
+    <i class="bi bi-box-arrow-up pe-2"></i> Export
   </button>
 </div>
