--- a/StockManagement.Presentation/src/app/product/product.component.html
+++ b/StockManagement.Presentation/src/app/product/product.component.html
@@ -1,71 +1,103 @@
-<app-header></app-header>
 
-<div class="container">
-    <div class="row">
-        <div class="mt-3">
-            <div>
-                <div class="d-flex justify-content-between">
-                    <div class="d-flex align-items-center">
-                        <input [(ngModel)]="nameFilter" type="text" class="form-control form-control-sm me-2" placeholder="Name" />
-                        <input [(ngModel)]="descriptionFilter" type="text" class="form-control form-control-sm me-2" placeholder="Description" />
-                        <button class="btn btn-primary btn-sm" (click)="filterProducts()">Search</button>
-                    </div>
-        
-                    <app-export-to-excel [items]="productsList" title="Products"></app-export-to-excel>
-                </div>
-        
-                <table class="table table-hover">
-                    <thead>
-                        <tr class="table-success">
-                            <th scope="col">ID</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Description</th>
-                            <th scope="col">Category</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Quantity</th>
-                            <th *ngIf="isAdmin()" scope="col">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody *ngIf="!loading && productsList.length > 0">
-                        <tr *ngFor="let product of productsList">
-                            <th scope="row">{{product.id}}</th>
-                            <td>{{product.name}}</td>
-                            <td>{{product.description}}</td>
-                            <td>{{getCategoryName(product.category)}}</td>
-                            <td><i class="bi bi-currency-dollar"></i>{{product.price}}</td>
-                            <td>{{product.quantity}}</td>
-                            <td *ngIf="isAdmin()"><a [routerLink]="'edit/' + product.id"><i class="bi bi-pencil"></i></a></td>
-                        </tr>
-                    </tbody>
-        
-                    <tbody *ngIf="!loading && productsList.length <= 0">
-                        <tr>
-                            <td colspan="7" class="text-body-tertiary text-center">No products are available</td>
-                        </tr>
-                    </tbody>
-        
-                    <tbody *ngIf="loading">
-                      <tr>
-                        <td colspan="7" class="text-body-tertiary text-center">
-                          <div class="d-flex justify-content-center">
-                            <div class="spinner-border text-primary" role="status">
-                              <span class="visually-hidden">Loading...</span>
-                            </div>
-                          </div>
-                        </td>
-                      </tr>
-                    </tbody>
-                </table>
-        
-                <mat-paginator
-                    [length]="totalProducts"
-                    [pageSize]="pageSize"
-                    [pageSizeOptions]="pageSizeOptions"
-                    (page)="onPageChange($event)">
-                </mat-paginator>
-            </div>
-        </div>
+
+<div>
+  <div class="d-flex justify-content-between">
+    <div class="d-flex align-items-center">
+      <app-export-to-excel [items]="productsList" title="Products"></app-export-to-excel>
+      <button class="btn btn-danger btn-sm px-3 py-2 ms-2 fw-bold"><i class="bi bi-trash pe-2"></i> Delete</button>
     </div>
+    <div>
+      <div class="d-flex align-items-center">
+        <input [(ngModel)]="search" (keyup)="filterProducts($event)"  type="text" class="form-control me-3 py-2 filter" placeholder="Search by name or description" />
+        <a class="btn btn-light btn-sm px-3 py-2 fw-bold text-nowrap" routerLink="/products/add"><i class="bi bi-plus-lg"></i> Add New</a>
+      </div>
+    </div>
+
+
+
+  </div>
+
+  <div class="rounded-3 p-2 mt-2 bg-white">
+    <table class="table table-hover rounded-start-3">
+      <thead>
+          <tr>
+              <th scope="col" (click)="sort('id')">
+                ID
+                <span *ngIf="sortedColumn === 'id'">
+                  {{ sortDirection === 'asc' ? '▲' : '▼' }}
+                </span>
+              </th>
+              <th scope="col" (click)="sort('name')">
+                Name
+                <span *ngIf="sortedColumn === 'name'">
+                  {{ sortDirection === 'asc' ? '▲' : '▼' }}
+                </span>
+              </th>
+              <th scope="col" (click)="sort('description')">
+                Description
+                <span *ngIf="sortedColumn === 'description'">
+                  {{ sortDirection === 'asc' ? '▲' : '▼' }}
+                </span>
+              </th>
+              <th scope="col" (click)="sort('category')">
+                Category
+                <span *ngIf="sortedColumn === 'category'">
+                  {{ sortDirection === 'asc' ? '▲' : '▼' }}
+                </span>
+              </th>
+              <th scope="col" (click)="sort('price')">
+                Price
+                <span *ngIf="sortedColumn === 'price'">
+                  {{ sortDirection === 'asc' ? '▲' : '▼' }}
+                </span>
+              </th>
+              <th scope="col" (click)="sort('quantity')">
+                Quantity
+                <span *ngIf="sortedColumn === 'quantity'">
+                  {{ sortDirection === 'asc' ? '▲' : '▼' }}
+                </span>
+              </th>
+              <th *ngIf="isAdmin()" scope="col">Actions</th>
+          </tr>
+      </thead>
+      <tbody *ngIf="!loading && productsList.length > 0">
+          <tr *ngFor="let product of productsList">
+              <th scope="row">{{product.id}}</th>
+              <td>{{product.name}}</td>
+              <td>{{product.description}}</td>
+              <td>{{getCategoryName(product.category)}}</td>
+              <td><i class="bi bi-currency-dollar"></i>{{product.price}}</td>
+              <td>{{product.quantity}}</td>
+              <td *ngIf="isAdmin()"><a [routerLink]="'edit/' + product.id"><i class="bi bi-pencil"></i></a></td>
+          </tr>
+      </tbody>
+
+      <tbody *ngIf="!loading && productsList.length <= 0">
+          <tr>
+              <td colspan="7" class="text-body-tertiary text-center">No products are available</td>
+          </tr>
+      </tbody>
+
+      <tbody *ngIf="loading">
+        <tr>
+          <td colspan="7" class="text-body-tertiary text-center">
+            <div class="d-flex justify-content-center">
+              <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <mat-paginator
+        [length]="totalProducts"
+        [pageSize]="pageSize"
+        [pageSizeOptions]="pageSizeOptions"
+        (page)="onPageChange($event)">
+    </mat-paginator>
+  </div>
 </div>
 
 
