monday, working on notes

--- a/StockManagement.Presentation/src/app/master-layout/master-layout.component.html
+++ b/StockManagement.Presentation/src/app/master-layout/master-layout.component.html
@@ -17,7 +17,7 @@
       </a>
     </li>
 
-    <li>
+    <li *ngIf="isAdmin()">
       <a routerLink="/users" routerLinkActive="active">
         <i class="bi bi-people"></i>
         <span class="link_name">Users</span>
