--- a/StockManagement.Presentation/src/app/product/product.component.html
+++ b/StockManagement.Presentation/src/app/product/product.component.html
@@ -4,12 +4,11 @@
   <div class="d-flex justify-content-between">
     <div class="d-flex align-items-center">
       <app-export-to-excel [items]="productsList" title="Products"></app-export-to-excel>
-      <button class="btn btn-danger btn-sm px-3 py-2 ms-2 fw-bold"><i class="bi bi-trash pe-2"></i> Delete</button>
     </div>
     <div>
       <div class="d-flex align-items-center">
         <input [(ngModel)]="search" (keyup)="filterProducts($event)"  type="text" class="form-control me-3 py-2 filter" placeholder="Search by name or description" />
-        <a class="btn btn-light btn-sm px-3 py-2 fw-bold text-nowrap" routerLink="/products/add"><i class="bi bi-plus-lg"></i> Add New</a>
+        <a *ngIf="isAdmin()" class="btn btn-light btn-sm px-3 py-2 fw-bold text-nowrap" routerLink="/products/add"><i class="bi bi-plus-lg"></i> Add New</a>
       </div>
     </div>
 
@@ -68,7 +67,15 @@
               <td>{{product.categoryName}}</td>
               <td><i class="bi bi-currency-dollar"></i>{{product.price}}</td>
               <td>{{product.serialNumber}}</td>
-              <td *ngIf="isAdmin()"><a [routerLink]="'edit/' + product.id"><i class="bi bi-pencil"></i></a></td>
+              <td *ngIf="isAdmin()">
+                <a class="btn btn-link" [routerLink]="'edit/' + product.id">
+                  <i class="bi bi-pencil"></i>
+                </a>
+                |
+                <button class="btn btn-link text-danger" (click)="deleteProduct(product.id, product.name)">
+                  <i class="bi bi-trash"></i>
+                </button>
+              </td>
           </tr>
       </tbody>
 
