--- a/StockManagement.Presentation/src/app/users/users.component.html
+++ b/StockManagement.Presentation/src/app/users/users.component.html
@@ -4,7 +4,6 @@
     <div class="d-flex justify-content-between">
       <div class="d-flex align-items-center">
         <app-export-to-excel [items]="usersList" title="Users"></app-export-to-excel>
-        <button class="btn btn-danger btn-sm px-3 py-2 ms-2 fw-bold"><i class="bi bi-trash pe-2"></i> Delete</button>
       </div>
       <div>
         <div class="d-flex align-items-center">
@@ -12,11 +11,8 @@
           <a class="btn btn-light btn-sm px-3 py-2 fw-bold text-nowrap" routerLink="/users/add"><i class="bi bi-plus-lg"></i> Add New</a>
         </div>
       </div>
-  
-  
-  
     </div>
-  
+
     <div class="rounded-3 p-2 mt-2 bg-white">
       <table class="table table-hover rounded-start-3">
         <thead>
@@ -51,6 +47,7 @@
                     {{ sortDirection === 'asc' ? '▲' : '▼' }}
                   </span>
                 </th>
+                <th *ngIf="isAdmin()" scope="col">Actions</th>
             </tr>
         </thead>
         <tbody *ngIf="!loading && usersList.length > 0">
@@ -60,15 +57,20 @@
                 <td>{{user.firstName}}</td>
                 <td>{{user.lastName}}</td>
                 <td>{{getRoleName(user.role)}}</td>
+                <td *ngIf="isAdmin()">
+                  <button class="btn btn-link text-danger" (click)="deleteUser(user.id, user.username)">
+                    <i class="bi bi-trash"></i>
+                  </button>
+                </td>
             </tr>
         </tbody>
-  
+
         <tbody *ngIf="!loading && usersList.length <= 0">
             <tr>
                 <td colspan="7" class="text-body-tertiary text-center">No Users are available</td>
             </tr>
         </tbody>
-  
+
         <tbody *ngIf="loading">
           <tr>
             <td colspan="7" class="text-body-tertiary text-center">
@@ -81,7 +83,7 @@
           </tr>
         </tbody>
       </table>
-  
+
       <mat-paginator
           [length]="totalUsers"
           [pageSize]="pageSize"
@@ -90,7 +92,6 @@
       </mat-paginator>
     </div>
   </div>
-  
-  
-  
-  
+
+
+
