add store entity

--- a/StockManagement.Presentation/src/app/master-layout/master-layout.component.html
+++ b/StockManagement.Presentation/src/app/master-layout/master-layout.component.html
@@ -11,6 +11,13 @@
     </li>
 
     <li>
+      <a routerLink="/stores" routerLinkActive="active">
+        <i class="bi bi-shop"></i>
+        <span class="link_name">Stores</span>
+      </a>
+    </li>
+
+    <li>
       <a routerLink="/categories" routerLinkActive="active">
         <i class="bi bi-collection"></i>
         <span class="link_name">Categories</span>
