--- a/StockManagement.Presentation/src/app/users/users.component.html
+++ b/StockManagement.Presentation/src/app/users/users.component.html
@@ -83,14 +83,14 @@
           </tr>
         </tbody>
       </table>
+    </div>
 
-      <mat-paginator
+    <mat-paginator class="mt-2 rounded-1"
           [length]="totalUsers"
           [pageSize]="pageSize"
           [pageSizeOptions]="pageSizeOptions"
           (page)="onPageChange($event)">
       </mat-paginator>
-    </div>
   </div>
 
 
